backend/src/api/api.hpp

    /// @brief Opaque handle to one editor instance: a Root (database),
    /// ViewLayerSet, Scene (view state), Pipeline, and Renderer, all with
    /// the "one instance per Scene-equivalent lifetime, reused across
    /// repeated calls" lifetime Pipeline/Renderer are designed around (see
    /// pipeline.hpp/render.hpp) - a fresh Pipeline/Renderer per call would
    /// defeat their internal caching entirely. Opaque so this header stays
    /// C-compatible; the real struct is defined only in api.cpp.
    typedef struct LeHandle LeHandle;
    /// @brief Mirrors the database's LibraryId handle (generated/ids.hpp's
    /// `Id<LibraryTag>`) for the FFI boundary: a stable identity for one
    /// Library, safe to hold onto and pass back into e.g.
    /// le_set_current_design_by_id() later without re-deriving it from a
    /// position in le_library_at()'s enumeration. `index ==
    /// UINT32_MAX` (matching `Id<Tag>::valid()`) marks it invalid - never
    /// construct one by hand, only copy one returned by this API.
    typedef struct LeLibraryId
    {
        uint32_t index;
        uint32_t generation;
    } LeLibraryId;
    /// @brief Mirrors the database's DesignId handle - see LeLibraryId's
    /// comment for the general contract.
    typedef struct LeDesignId
    {
        uint32_t index;
        uint32_t generation;
    } LeDesignId;
    /// @brief Mirrors the database's AbstractId handle - see LeLibraryId's
    /// comment for the general contract.
    typedef struct LeAbstractId
    {
        uint32_t index;
        uint32_t generation;
    } LeAbstractId;
    /// @brief Total number of error/warning/info messages produced by
    /// this handle's backend operations so far (currently just
    /// le_read_lef() - file-open/parse errors, parser warnings, parser
    /// info notes, and a success summary, each already formatted with
    /// its own "ERROR "/"WARNING "/"INFO " prefix). Monotonically
    /// increasing - entries are never removed, cleared, or reordered -
    /// so a caller can poll this like le_selection_version() and only
    /// fetch le_message_at() for indices at or past what it last saw,
    /// rather than re-reading everything on every check. 0 if handle is
    /// null.
    int32_t le_message_count(LeHandle *handle);
    /// @brief The message at `index` (0..le_message_count()-1). Returns
    /// null if handle is null or index is out of range. The returned
    /// pointer is owned by the handle - valid until the handle is
    /// destroyed (messages are never removed/reordered, so unlike a
    /// "last error" design this pointer is never invalidated by a later
    /// le_read_lef() call).
    const char *le_message_at(LeHandle *handle, int32_t index);
    /// @brief One name/value row of a selected object's property table
    /// (UPDATES.md 7.2) - a caller reads `type` to know which of
    /// string_value/int_value/double_value to use; the other two are
    /// unspecified. `name`/`string_value` point into memory owned by the
    /// LeHandle - valid only until the next le_selected_object_property_at()
    /// or le_selected_object_property_count() call *for the same
    /// selection_index* (a different selection_index, or a selection
    /// change, may invalidate them sooner) - same "valid until the next
    /// call" convention as LePixelBuffer, never owned by the caller and
    /// never to be freed by it. `name` is null (and every other field 0/
    /// unspecified) if this row is invalid (out-of-range selection_index/
    /// property_index or null handle).
    typedef struct LeProperty
    {
        const char *name;
        int32_t type; // LePropertyType
        const char *string_value;
        int64_t int_value;
        double double_value;
    } LeProperty;
    // --- CRUD + filter-search (UPDATES.md item 15 / TCL_EXPLORATION.md
    // Phase 4) - Terminal only so far; TerminalPort/Obstruction/Abstract-
    // boundary follow the same shape in a later pass. Layered on top of
    // Root's Phase 1/2 primitives (create_x/delete_x/set_x_<field>,
    // get_field()/match_hop()/search_x, backend/src/database/filter.hpp's
    // parser+evaluator) - see TCL_EXPLORATION.md for the full design.
    // Every id here is addressed directly, not through the current GUI
    // selection (le_selected_object_property_at's own LeSelectionKind
    // path stays selection-scoped, unchanged) - the natural fit for a
    // TCL caller that isn't driving the GUI at all. ---

    /// @brief Mirrors the database's TerminalId handle - see LeLibraryId's
    /// comment for the general contract.
    typedef struct LeTerminalId
    {
        uint32_t index;
        uint32_t generation;
    } LeTerminalId;
    /// @brief Create a Terminal (a.k.a. pin) on the Abstract at
    /// `abstract_id` (UPDATES.md item 15's `create_terminal -name IN0
    /// -direction IN`). Only name/direction are settable here - every
    /// other Terminal field (LEF's optional use/shape/antenna/etc.
    /// fields) defaults to its zero value; extend this function's
    /// parameter list if a real caller needs to set one at creation time
    /// rather than via a later le_set_terminal_* call. `name` must be
    /// unique among Terminals already on `abstract_id` (a TCL script
    /// addresses a Terminal by name - UPDATES.md's Terminal-friendly-id
    /// item - so a collision would be genuinely ambiguous, not just
    /// unusual; enforced by a linear scan over
    /// Root::get_abstract_terminals, not a cmg index=True lookup, since
    /// real LEF libraries legitimately reuse pin names like VDD/IN0
    /// across different Abstracts and index=True's generated index is
    /// flat/global, not per-Abstract). Returns an invalid LeTerminalId
    /// (index == UINT32_MAX) if handle or name is null, abstract_id
    /// doesn't name an Abstract on this handle, or name collides with an
    /// existing Terminal on it (pushes an ERROR message the same way a
    /// filter-expression parse error does - see le_message_count/
    /// le_message_at).
    LeTerminalId le_create_terminal(LeHandle *handle, LeAbstractId abstract_id, const char *name, int32_t direction);
    /// @brief Resolve a dotted property path against the Terminal at
    /// `id` (UPDATES.md item 19.2's `get_properties`/`report_properties`
    /// dot-notation, e.g. `.name`, or chained through a hop like
    /// `.ports.port_class`) - see `backend/src/database/filter.hpp`'s
    /// `parse_property_path`/`resolve_property_path` for the grammar and
    /// resolution semantics (same `match_hop`/`get_field` machinery
    /// `-filter` expressions already use, just resolving a value instead
    /// of evaluating a comparison). Every segment but the last must be a
    /// hop, the last must be a leaf field - both checked against the
    /// same allowlist `-filter` validation uses (`validate_filter_path`
    /// in api.cpp) before resolving, so an unrecognized field/hop name
    /// is a real error (pushed via `le_message_count`/`le_message_at`),
    /// not silent. Returns an all-null/zero row (LeProperty::name ==
    /// nullptr) if handle/path is null, `path` fails to parse or
    /// validate, id doesn't name a Terminal on this handle, or the path
    /// is structurally valid but resolves to nothing for this specific
    /// object (e.g. a list hop with zero elements) - the latter case
    /// pushes no message, unlike a parse/validation failure.
    LeProperty le_terminal_property_path(LeHandle *handle, LeTerminalId id, const char *path);
    // --- Library/Design/Abstract/Shape property rows (UPDATES.md item
    // 19.2's get_properties/report_properties) - same by-id shape as
    // le_terminal_property_count/_at above, one pair per type. Unlike
    // Terminal's own "port_count" (or TerminalPort/Obstruction's
    // "shapes_count", further below), none of these four add a derived
    // child-pool "_count" row - just cmg's generated to_properties() as-is
    // for each type; see le_get_designs/le_get_terminals/
    // le_get_obstructions if you need those counts instead. ---

    /// @brief Number of property rows for the Library at `id`. Rows:
    /// every plain Library field from cmg's generated to_properties()
    /// ("name"). Returns 0 if handle is null or id doesn't name a Library
    /// on this handle.
    int32_t le_library_property_count(LeHandle *handle, LeLibraryId id);
    /// @brief The property row at `index`
    /// (0..le_library_property_count(id)-1) for the Library at `id`.
    /// Returns an all-null/zero row (LeProperty::name == nullptr) if
    /// handle is null, id doesn't name a Library on this handle, or index
    /// is out of range.
    LeProperty le_library_property_at(LeHandle *handle, LeLibraryId id, int32_t index);
    /// @brief Resolve a dotted property path against the Library at
    /// `id` (e.g. `.name`, or chained through a hop like
    /// `.designs.name`) - see le_terminal_property_path's own comment
    /// for the full grammar/validation/error contract.
    LeProperty le_library_property_path(LeHandle *handle, LeLibraryId id, const char *path);
    /// @brief Number of property rows for the Design at `id`. Rows: every
    /// plain Design field from cmg's generated to_properties() ("name").
    /// Returns 0 if handle is null or id doesn't name a Design on this
    /// handle.
    int32_t le_design_property_count(LeHandle *handle, LeDesignId id);
    /// @brief The property row at `index`
    /// (0..le_design_property_count(id)-1) for the Design at `id`.
    /// Returns an all-null/zero row (LeProperty::name == nullptr) if
    /// handle is null, id doesn't name a Design on this handle, or index
    /// is out of range.
    LeProperty le_design_property_at(LeHandle *handle, LeDesignId id, int32_t index);
    /// @brief Resolve a dotted property path against the Design at
    /// `id` (e.g. `.name`, or chained through a hop like
    /// `.library.name`) - see le_terminal_property_path's own comment
    /// for the full grammar/validation/error contract.
    LeProperty le_design_property_path(LeHandle *handle, LeDesignId id, const char *path);
    /// @brief Number of property rows for the Abstract at `id`. Rows:
    /// every plain Abstract field from cmg's generated to_properties()
    /// ("type", "size", "origin", ..., plus its own list-field "_count"
    /// rows like "boundary_count"). Returns 0 if handle is null or id
    /// doesn't name an Abstract on this handle.
    int32_t le_abstract_property_count(LeHandle *handle, LeAbstractId id);
    /// @brief The property row at `index`
    /// (0..le_abstract_property_count(id)-1) for the Abstract at `id`.
    /// Returns an all-null/zero row (LeProperty::name == nullptr) if
    /// handle is null, id doesn't name an Abstract on this handle, or
    /// index is out of range.
    LeProperty le_abstract_property_at(LeHandle *handle, LeAbstractId id, int32_t index);
    /// @brief Resolve a dotted property path against the Abstract at
    /// `id` (e.g. `.type`, or chained through a hop like
    /// `.design.name`) - see le_terminal_property_path's own comment
    /// for the full grammar/validation/error contract.
    LeProperty le_abstract_property_path(LeHandle *handle, LeAbstractId id, const char *path);
    /// @brief Rename the Terminal at `id` (UPDATES.md item 15's
    /// `update_terminal_port -name ...` pattern, applied to Terminal
    /// itself) - `name` isn't index=True so this is a direct field
    /// mutation, not a generated Root::set_terminal_name (see
    /// TCL_EXPLORATION.md's "cmg codegen design" for why only
    /// indexed/parent fields get a generated setter). Same uniqueness
    /// enforcement as le_create_terminal, scoped to the Terminal's own
    /// Abstract - renaming to the Terminal's own current name is a no-op
    /// success, not a self-collision. Returns 0 on success, nonzero if
    /// handle or name is null, id doesn't name a Terminal on this handle,
    /// or name collides with a different Terminal already on the same
    /// Abstract (pushes an ERROR message, same convention as
    /// le_create_terminal).
    int le_set_terminal_name(LeHandle *handle, LeTerminalId id, const char *name);
    /// @brief Change the Terminal at `id`'s signal direction. Returns 0
    /// on success, nonzero if handle is null or id doesn't name a
    /// Terminal on this handle.
    int le_set_terminal_direction(LeHandle *handle, LeTerminalId id, int32_t direction);