flutter_plugin/lib/lef_editor_plugin_bindings_generated.dart


  /// @brief Resolve a dotted property path against the Terminal at
  /// `id` (UPDATES.md item 19.2's `get_properties`/`report_properties`
  /// dot-notation, e.g. `.name`, or chained through a hop like
  /// `.ports.port_class`) - see `backend/src/database/filter.hpp`'s
  /// `parse_property_path`/`resolve_property_path` for the grammar and
  /// resolution semantics (same `match_hop`/`get_field` machinery
  /// `-filter` expressions already use, just resolving a value instead
  /// of evaluating a comparison). Every segment but the last must be a
  /// hop, the last must be a leaf field - both checked against the
  /// same allowlist `-filter` validation uses (`validate_filter_path`
  /// in api.cpp) before resolving, so an unrecognized field/hop name
  /// is a real error (pushed via `le_message_count`/`le_message_at`),
  /// not silent. Returns an all-null/zero row (LeProperty::name ==
  /// nullptr) if handle/path is null, `path` fails to parse or
  /// validate, id doesn't name a Terminal on this handle, or the path
  /// is structurally valid but resolves to nothing for this specific
  /// object (e.g. a list hop with zero elements) - the latter case
  /// pushes no message, unlike a parse/validation failure.
  LeProperty le_terminal_property_path(
    ffi.Pointer<LeHandle> handle,
    LeTerminalId id,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _le_terminal_property_path(handle, id, path);
  }

  late final _le_terminal_property_pathPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(
            ffi.Pointer<LeHandle>,
            LeTerminalId,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('le_terminal_property_path');
  late final _le_terminal_property_path = _le_terminal_property_pathPtr
      .asFunction<
        LeProperty Function(
          ffi.Pointer<LeHandle>,
          LeTerminalId,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Number of property rows for the Library at `id`. Rows:
  /// every plain Library field from cmg's generated to_properties()
  /// ("name"). Returns 0 if handle is null or id doesn't name a Library
  /// on this handle.
  int le_library_property_count(ffi.Pointer<LeHandle> handle, LeLibraryId id) {
    return _le_library_property_count(handle, id);
  }

  late final _le_library_property_countPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<LeHandle>, LeLibraryId)
        >
      >('le_library_property_count');
  late final _le_library_property_count = _le_library_property_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, LeLibraryId)>();

  /// @brief The property row at `index`
  /// (0..le_library_property_count(id)-1) for the Library at `id`.
  /// Returns an all-null/zero row (LeProperty::name == nullptr) if
  /// handle is null, id doesn't name a Library on this handle, or index
  /// is out of range.
  LeProperty le_library_property_at(
    ffi.Pointer<LeHandle> handle,
    LeLibraryId id,
    int index,
  ) {
    return _le_library_property_at(handle, id, index);
  }

  late final _le_library_property_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(ffi.Pointer<LeHandle>, LeLibraryId, ffi.Int32)
        >
      >('le_library_property_at');
  late final _le_library_property_at = _le_library_property_atPtr
      .asFunction<
        LeProperty Function(ffi.Pointer<LeHandle>, LeLibraryId, int)
      >();

  /// @brief Resolve a dotted property path against the Library at
  /// `id` (e.g. `.name`, or chained through a hop like
  /// `.designs.name`) - see le_terminal_property_path's own comment
  /// for the full grammar/validation/error contract.
  LeProperty le_library_property_path(
    ffi.Pointer<LeHandle> handle,
    LeLibraryId id,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _le_library_property_path(handle, id, path);
  }

  late final _le_library_property_pathPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(
            ffi.Pointer<LeHandle>,
            LeLibraryId,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('le_library_property_path');
  late final _le_library_property_path = _le_library_property_pathPtr
      .asFunction<
        LeProperty Function(
          ffi.Pointer<LeHandle>,
          LeLibraryId,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Number of property rows for the Design at `id`. Rows: every
  /// plain Design field from cmg's generated to_properties() ("name").
  /// Returns 0 if handle is null or id doesn't name a Design on this
  /// handle.
  int le_design_property_count(ffi.Pointer<LeHandle> handle, LeDesignId id) {
    return _le_design_property_count(handle, id);
  }

  late final _le_design_property_countPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<LeHandle>, LeDesignId)
        >
      >('le_design_property_count');
  late final _le_design_property_count = _le_design_property_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, LeDesignId)>();

  /// @brief The property row at `index`
  /// (0..le_design_property_count(id)-1) for the Design at `id`.
  /// Returns an all-null/zero row (LeProperty::name == nullptr) if
  /// handle is null, id doesn't name a Design on this handle, or index
  /// is out of range.
  LeProperty le_design_property_at(
    ffi.Pointer<LeHandle> handle,
    LeDesignId id,
    int index,
  ) {
    return _le_design_property_at(handle, id, index);
  }

  late final _le_design_property_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(ffi.Pointer<LeHandle>, LeDesignId, ffi.Int32)
        >
      >('le_design_property_at');
  late final _le_design_property_at = _le_design_property_atPtr
      .asFunction<
        LeProperty Function(ffi.Pointer<LeHandle>, LeDesignId, int)
      >();

  /// @brief Resolve a dotted property path against the Design at
  /// `id` (e.g. `.name`, or chained through a hop like
  /// `.library.name`) - see le_terminal_property_path's own comment
  /// for the full grammar/validation/error contract.
  LeProperty le_design_property_path(
    ffi.Pointer<LeHandle> handle,
    LeDesignId id,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _le_design_property_path(handle, id, path);
  }

  late final _le_design_property_pathPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(
            ffi.Pointer<LeHandle>,
            LeDesignId,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('le_design_property_path');
  late final _le_design_property_path = _le_design_property_pathPtr
      .asFunction<
        LeProperty Function(
          ffi.Pointer<LeHandle>,
          LeDesignId,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Number of property rows for the Abstract at `id`. Rows:
  /// every plain Abstract field from cmg's generated to_properties()
  /// ("type", "size", "origin", ..., plus its own list-field "_count"
  /// rows like "boundary_count"). Returns 0 if handle is null or id
  /// doesn't name an Abstract on this handle.
  int le_abstract_property_count(
    ffi.Pointer<LeHandle> handle,
    LeAbstractId id,
  ) {
    return _le_abstract_property_count(handle, id);
  }

  late final _le_abstract_property_countPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<LeHandle>, LeAbstractId)
        >
      >('le_abstract_property_count');
  late final _le_abstract_property_count = _le_abstract_property_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, LeAbstractId)>();

  /// @brief The property row at `index`
  /// (0..le_abstract_property_count(id)-1) for the Abstract at `id`.
  /// Returns an all-null/zero row (LeProperty::name == nullptr) if
  /// handle is null, id doesn't name an Abstract on this handle, or
  /// index is out of range.
  LeProperty le_abstract_property_at(
    ffi.Pointer<LeHandle> handle,
    LeAbstractId id,
    int index,
  ) {
    return _le_abstract_property_at(handle, id, index);
  }

  late final _le_abstract_property_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(ffi.Pointer<LeHandle>, LeAbstractId, ffi.Int32)
        >
      >('le_abstract_property_at');
  late final _le_abstract_property_at = _le_abstract_property_atPtr
      .asFunction<
        LeProperty Function(ffi.Pointer<LeHandle>, LeAbstractId, int)
      >();

  /// @brief Resolve a dotted property path against the Abstract at
  /// `id` (e.g. `.type`, or chained through a hop like
  /// `.design.name`) - see le_terminal_property_path's own comment
  /// for the full grammar/validation/error contract.
  LeProperty le_abstract_property_path(
    ffi.Pointer<LeHandle> handle,
    LeAbstractId id,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _le_abstract_property_path(handle, id, path);
  }

  late final _le_abstract_property_pathPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(
            ffi.Pointer<LeHandle>,
            LeAbstractId,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('le_abstract_property_path');
  late final _le_abstract_property_path = _le_abstract_property_pathPtr
      .asFunction<
        LeProperty Function(
          ffi.Pointer<LeHandle>,
          LeAbstractId,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Rename the Terminal at `id` (UPDATES.md item 15's
  /// `update_terminal_port -name ...` pattern, applied to Terminal
  /// itself) - `name` isn't index=True so this is a direct field
  /// mutation, not a generated Root::set_terminal_name (see
  /// TCL_EXPLORATION.md's "cmg codegen design" for why only
  /// indexed/parent fields get a generated setter). Same uniqueness
  /// enforcement as le_create_terminal, scoped to the Terminal's own
  /// Abstract - renaming to the Terminal's own current name is a no-op
  /// success, not a self-collision. Returns 0 on success, nonzero if
  /// handle or name is null, id doesn't name a Terminal on this handle,
  /// or name collides with a different Terminal already on the same
  /// Abstract (pushes an ERROR message, same convention as
  /// le_create_terminal).
  int le_set_terminal_name(
    ffi.Pointer<LeHandle> handle,
    LeTerminalId id,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _le_set_terminal_name(handle, id, name);
  }

  late final _le_set_terminal_namePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<LeHandle>,
            LeTerminalId,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('le_set_terminal_name');
  late final _le_set_terminal_name = _le_set_terminal_namePtr
      .asFunction<
        int Function(ffi.Pointer<LeHandle>, LeTerminalId, ffi.Pointer<ffi.Char>)
      >();

  /// @brief Change the Terminal at `id`'s signal direction. Returns 0
  /// on success, nonzero if handle is null or id doesn't name a
  /// Terminal on this handle.
  int le_set_terminal_direction(
    ffi.Pointer<LeHandle> handle,
    LeTerminalId id,
    int direction,
  ) {
    return _le_set_terminal_direction(handle, id, direction);
  }

  late final _le_set_terminal_directionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<LeHandle>, LeTerminalId, ffi.Int32)
        >
      >('le_set_terminal_direction');
  late final _le_set_terminal_direction = _le_set_terminal_directionPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, LeTerminalId, int)>();
